@@ -2,6 +2,7 @@ package org.folio.bulkops.service;
 
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
+import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.LF;
 import static org.folio.bulkops.domain.dto.OperationStatusType.COMPLETED;
@@ -12,7 +13,9 @@ import static org.folio.bulkops.domain.dto.OperationStatusType.REVIEW_CHANGES;
 import static org.folio.bulkops.util.Constants.DATA_IMPORT_ERROR_DISCARDED;
 import static org.folio.bulkops.util.Constants.MSG_NO_CHANGE_REQUIRED;
 
+import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
+import java.io.InputStreamReader;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
@@ -29,6 +32,7 @@ import org.folio.bulkops.client.RemoteFileSystemClient;
 import org.folio.bulkops.domain.bean.JobLogEntry;
 import org.folio.bulkops.domain.bean.StateType;
 import org.folio.bulkops.domain.dto.Error;
+import org.folio.bulkops.domain.dto.ErrorType;
 import org.folio.bulkops.domain.dto.Errors;
 import org.folio.bulkops.domain.dto.IdentifierType;
 import org.folio.bulkops.domain.dto.Parameter;
@@ -56,7 +60,6 @@ public class ErrorService {
   private final BulkOperationRepository operationRepository;
   private final RemoteFileSystemClient remoteFileSystemClient;
   private final BulkOperationExecutionContentRepository executionContentRepository;
-  private final BulkEditClient bulkEditClient;
   private final MetadataProviderClient metadataProviderClient;
 
   public void saveError(UUID bulkOperationId, String identifier,  String errorMessage, String uiErrorMessage, String link) {
@@ -87,17 +90,23 @@ public class ErrorService {
     log.info("Errors deleted for bulk operation {}", bulkOperationId);
   }
 
-  public Errors getErrorsPreviewByBulkOperationId(UUID bulkOperationId, int limit) {
+  public Errors getErrorsPreviewByBulkOperationId(UUID bulkOperationId, int limit, int offset) {
     var bulkOperation = operationRepository.findById(bulkOperationId)
       .orElseThrow(() -> new NotFoundException("BulkOperation was not found by id=" + bulkOperationId));
     if (Set.of(DATA_MODIFICATION, REVIEW_CHANGES, REVIEWED_NO_MARC_RECORDS).contains(bulkOperation.getStatus()) || COMPLETED_WITH_ERRORS == bulkOperation.getStatus() && noCommittedErrors(bulkOperation)) {
-      var errors = bulkEditClient.getErrorsPreview(bulkOperation.getDataExportJobId(), limit);
-      return new Errors().errors(errors.getErrors().stream()
-          .map(this::prepareInternalErrorRepresentation)
-          .toList())
-        .totalRecords(errors.getTotalRecords());
+      var errors = new BufferedReader(new InputStreamReader(remoteFileSystemClient.get(bulkOperation.getLinkToMatchedRecordsErrorsCsvFile())))
+        .lines()
+        .skip(offset)
+        .limit(limit)
+        .map(message -> {
+          var error = message.split(Constants.COMMA_DELIMETER);
+          return new Error().message(error[1]).parameters(List.of(new Parameter().key(IDENTIFIER).value(error[0])));
+        })
+        .collect(toList());
+      return new Errors().errors(errors)
+        .totalRecords(remoteFileSystemClient.getNumOfLines(bulkOperation.getLinkToMatchedRecordsErrorsCsvFile()));
     } else if (COMPLETED == bulkOperation.getStatus() || COMPLETED_WITH_ERRORS == bulkOperation.getStatus()) {
-      return getExecutionErrors(bulkOperationId, limit);
+      return getExecutionErrors(bulkOperationId, limit, offset);
     } else {
       throw new NotFoundException("Errors preview is not available");
     }
@@ -139,19 +148,8 @@ public class ErrorService {
     return isNull(bulkOperation.getCommittedNumOfErrors()) || bulkOperation.getCommittedNumOfErrors() == 0;
   }
 
-  private Error prepareInternalErrorRepresentation(Error e) {
-    var error= e.getMessage().split(Constants.COMMA_DELIMETER);
-    return new Error().message(error[1]).parameters(List.of(new Parameter().key(IDENTIFIER).value(error[0])));
-  }
-
-  public String getErrorsCsvByBulkOperationId(UUID bulkOperationId) {
-    return getErrorsPreviewByBulkOperationId(bulkOperationId, Integer.MAX_VALUE).getErrors().stream()
-      .map(error -> String.join(Constants.COMMA_DELIMETER, ObjectUtils.isEmpty(error.getParameters()) ? EMPTY : error.getParameters().get(0).getValue(), error.getMessage()))
-      .collect(Collectors.joining(Constants.NEW_LINE_SEPARATOR));
-  }
-
-  private Errors getExecutionErrors(UUID bulkOperationId, int limit) {
-    var errorPage = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNull(bulkOperationId, OffsetRequest.of(0, limit));
+  private Errors getExecutionErrors(UUID bulkOperationId, int limit, int offset) {
+    var errorPage = executionContentRepository.findByBulkOperationIdAndErrorMessageIsNotNull(bulkOperationId, OffsetRequest.of(offset, limit));
     var errors = errorPage.toList().stream()
       .map(this::executionContentToFolioError)
       .toList();
